# toughio

./: .bandit  .buildinfo  .codacy.yml  .coveragerc  .gitattributes  .gitignore  .prospector.yml  .readthedocs.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  genindex.html  github_deploy_key_keurfonluu_toughio.enc  index.html  install_flac6.bat  install_flac7.bat  objects.inv  sample.py  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  tasks.py  uninstall_flac6.bat  uninstall_flac7.bat
.doctrees/: index.doctree  sg_execution_times.doctree
_modules/: index.html
_sources/: sg_execution_times.rst.txt
api/: cli.html  index.html  io.html  mesh.html  rpcap.html  run.html
cube/: cube.med
doc/: requirements.txt
examples/: README.rst  index.html  sg_execution_times.html
guide/: index.html  input.html  installation.html
joss/: paper.bib  paper.md
notebooks/: CO2TAB  README.md  clean.sh  run.sh
paper/: paper.bib  paper.md
test/: helpers.py  test_capillarity.py  test_cli.py  test_input.py  test_mesh_methods.py  test_mesh_properties.py  test_meshio.py  test_meshmaker.py  test_output.py  test_properties.py  test_react.py  test_relative_permeability.py  test_time_series.py  test_tough.py
tests/: helpers.py  test_capillarity.py  test_cli.py  test_h5.py  test_history.py  test_input.py  test_mesh_methods.py  test_meshio.py  test_meshmaker.py  test_output.py  test_react.py  test_relative_permeability.py  test_run.py  test_table.py  test_time_series.py
(+432 files in other folders)
