[metadata]
name = toughio
version = attr: toughio.__about__.__version__
author = Keurfon Luu
email = keurfonluu@lbl.gov
description = Pre- and post-processing Python library for TOUGH
url = https://github.com/keurfonluu/toughio
project_urls =
    Code=https://github.com/keurfonluu/toughio
    Issues=https://github.com/keurfonluu/toughio/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find_namespace:
install_requires =
    importlib_metadata
    numpy >= 1.13.0
    meshio >= 5.2, < 6.0
python_requires = >= 3.7
setup_requires =
    setuptools >= 42
    wheel

[options.extras_require]
full =
    pyvista >= 0.33
    netcdf4
    matplotlib
    h5py
    scipy >= 0.9

[options.package_data]
toughio.data =
    CO2TAB

[options.entry_points]
console_scripts =
    toughio-co2tab = toughio._cli:co2tab
    toughio-export = toughio._cli:export
    toughio-extract = toughio._cli:extract
    toughio-merge = toughio._cli:merge
    toughio-save2incon = toughio._cli:save2incon